// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given <Modal /> When initializes And uses actions Then should match the snapshot 1`] = `
<div>
  <div
    class="dialog modal is-active"
  >
    <div
      class="layout is-0 layout-center"
    >
      <div
        class="layout-item"
      >
        <div
          class="overlay"
        />
        <div
          class="containers card modal-card"
        >
          <div
            class="layout is-0 layout-border is-scrollable"
          >
            <div
              class="layout-item border is-center"
            >
              <div
                class="card-content"
              >
                <span
                  class="text"
                >
                  Testing
                </span>
              </div>
            </div>
            <div
              class="layout-item border is-south"
            >
              <div
                class="card-footer modal-footer"
              >
                <div
                  class="layout is-2 columns has-alignment-end is-reverted"
                >
                  <div
                    class="is-auto layout-item column"
                  >
                    <div
                      class="card-footer-action"
                    >
                      <button
                        class="button"
                      >
                        <span
                          class="text"
                        >
                          Testing Action
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Given <Modal /> When initializes And uses onClose Then should match the snapshot 1`] = `
<div>
  <div
    class="dialog modal is-active"
  >
    <div
      class="layout is-0 layout-center"
    >
      <div
        class="layout-item"
      >
        <div
          class="overlay"
        />
        <div
          class="containers card modal-card"
        >
          <div
            class="layout is-0 layout-border is-scrollable"
          >
            <div
              class="layout-item border is-north"
            >
              <div
                class="card-header modal-header"
              >
                <div
                  class="layout is-2 columns is-mobile"
                >
                  <div
                    class="layout-item column"
                  >
                    <h3
                      class="is-3 text title"
                    />
                  </div>
                  <div
                    class="is-auto layout-item column"
                  >
                    <button
                      class="button is-text dialog-close"
                    >
                      <span
                        class="icon"
                      >
                        <i
                          class="icon-font icon-font-close-outline"
                        />
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="layout-item border is-center"
            >
              <div
                class="card-content"
              >
                <span
                  class="text"
                >
                  Testing
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Given <Modal /> When initializes And uses title Then should match the snapshot 1`] = `
<div>
  <div
    class="dialog modal is-active"
  >
    <div
      class="layout is-0 layout-center"
    >
      <div
        class="layout-item"
      >
        <div
          class="overlay"
        />
        <div
          class="containers card modal-card"
        >
          <div
            class="layout is-0 layout-border is-scrollable"
          >
            <div
              class="layout-item border is-north"
            >
              <div
                class="card-header modal-header"
              >
                <div
                  class="layout is-2 columns is-mobile"
                >
                  <div
                    class="layout-item column"
                  >
                    <h3
                      class="is-3 text title"
                    >
                      Testing Title
                    </h3>
                  </div>
                  <div
                    class="is-auto layout-item column"
                  >
                    <button
                      class="button is-text dialog-close"
                    >
                      <span
                        class="icon"
                      >
                        <i
                          class="icon-font icon-font-close-outline"
                        />
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="layout-item border is-center"
            >
              <div
                class="card-content"
              >
                <span
                  class="text"
                >
                  Testing
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Given <Modal /> When initializes Then should match the snapshot 1`] = `
<div>
  <div
    class="dialog modal is-active"
  >
    <div
      class="layout is-0 layout-center"
    >
      <div
        class="layout-item"
      >
        <div
          class="overlay"
        />
        <div
          class="containers card modal-card"
        >
          <div
            class="layout is-0 layout-border is-scrollable"
          >
            <div
              class="layout-item border is-center"
            >
              <div
                class="card-content"
              >
                <span
                  class="text"
                >
                  Testing
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
